Attempting to fix stage being too big on mobile chrome

--- a/css/main.css
+++ b/css/main.css
@@ -226,7 +226,9 @@ button.accordion:focus {
 #intro {
     width: 100%;
     height: 100vh;
-    background-color: #333c4a;    
+    height: calc(var(--vh, 1vh) * 100);
+    background-color: #333c4a;
+    transition: height 1s ease; 
 }
 
 #intro canvas {
